--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -7,19 +7,42 @@
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
+  <ion-card *ngFor="let company of companies">
+    <img src="{{ company.logoUrl }}">
+    <ion-card-content>
+      <ion-row>
+        <ion-col>
+          <ion-card-title>
+            {{ company.title }}
+          </ion-card-title>
+        </ion-col>
+        <ion-col>
+          <ion-card-title style="text-align:right;">
+            {{ company.discount }}
+          </ion-card-title>
+        </ion-col>
+      </ion-row>
+      <p>
+        {{ company.description }}
+      </p>
+    </ion-card-content>
 
-  <h3>Welcome to your first Ionic app!</h3>
+    <ion-row>
+      <ion-col *ngIf="company.website">
+        <button ion-button icon-left clear small>
+        <ion-icon name="open"></ion-icon>
+        <div>Website</div>
+      </button>
+      </ion-col>
+      <ion-col *ngIf="company.location">
+        <button ion-button icon-left clear small>
+        <ion-icon name="map"></ion-icon>
+        <div>Show on map</div>
+      </button>
+      </ion-col>
+    </ion-row>
 
-  <p>
-    This starter project is our way of helping you get a functional app running in record time.
-  </p>
-  <p>
-    Follow along on the tutorial section of the Ionic docs!
-  </p>
-  <p>
-    <button ion-button color="primary" menuToggle>Toggle Menu</button>
-  </p>
+  </ion-card>
 
 </ion-content>
