feat: add further companies

--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -16,7 +16,7 @@
             <strong>{{ company.title }}</strong>
           </h2>
         </ion-col>
-        <ion-col>
+        <ion-col *ngIf="company.discount">
           <h2 style="text-align:right;">
             {{ company.discount }}&nbsp;%
           </h2>
@@ -32,10 +32,10 @@
 
     <ion-row>
       <ion-col *ngIf="company.website">
-        <button ion-button icon-left clear small>
+        <a href="{{ company.website }}" ion-button icon-left clear small>
           <ion-icon name="open"></ion-icon>
           <div>Website</div>
-        </button>
+        </a>
       </ion-col>
       <ion-col *ngIf="company.facebook">
         <a href="{{ company.facebook }}" ion-button icon-left clear small>
