--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -8,6 +8,12 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card *ngIf="companies && companies.length > 0">
+    <ion-card-content>
+      <ion-icon name="star"></ion-icon>&nbsp;You're currently viewing {{ companies.length }} different offers!
+    </ion-card-content>
+  </ion-card>
+
   <ion-card *ngFor="let company of companies">
     <ion-card-header>
       <ion-row>
