--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,14 +12,11 @@
   <ion-list>
     <ion-item>
       <ion-label>{{ 'settings.language' | translate }}</ion-label>
-      <ion-select
-          okText="{{ 'settings.okText' | translate }}"
-          cancelText="{{ 'settings.dismiss' | translate }}"
-          [ngModel]="currentLanguage"
-          (ngModelChange)="onLanguageChanged($event)"
-          >
-        <ion-option value="en">English</ion-option>
+      <ion-select okText="{{ 'settings.okText' | translate }}" cancelText="{{ 'settings.dismiss' | translate }}" [ngModel]="currentLanguage"
+        (ngModelChange)="onLanguageChanged($event)">
         <ion-option value="de">Deutsch</ion-option>
+        <ion-option value="it">Italiano</ion-option>
+        <ion-option value="en">English</ion-option>
       </ion-select>
     </ion-item>
   </ion-list>
